--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div> 
                 </div>
                 <div class="about__photo">
-                    <img src="../img/BSPP2266.jpg" alt="photo" class="photo">
+                    <img src="img/BSPP2266.jpg" alt="photo" class="photo">
                 </div>
             </section>
             <section class="info">
@@ -80,10 +80,10 @@
                     I work in such programs as
                 </div>
                 <div class="skils__items">
-                    <div class="skils__item"><img src="../img/svg/Group 7.svg" alt="photoshop" class="skils__img"></div>
-                    <div class="skils__item"><img src="../img/svg/Group 6.svg" alt="illustrator" class="skils__img"></div>
-                    <div class="skils__item"><img src="../img/svg/Group 5.svg" alt="after efect" class="skils__img"></div>
-                    <div class="skils__item"><img src="../img/svg/Group 4.svg" alt="figma" class="skils__img"></div>
+                    <div class="skils__item"><img src="img/svg/Group 7.svg" alt="photoshop" class="skils__img"></div>
+                    <div class="skils__item"><img src="img/svg/Group 6.svg" alt="illustrator" class="skils__img"></div>
+                    <div class="skils__item"><img src="img/svg/Group 5.svg" alt="after efect" class="skils__img"></div>
+                    <div class="skils__item"><img src="img/svg/Group 4.svg" alt="figma" class="skils__img"></div>
                 </div>
             </section>
             <section class="portfolio">
@@ -92,15 +92,15 @@
                 </div>
                 <ul class="portfolio__items">
                     <li class="portfolio__item">
-                        <img src="../img/pr_1.jpg" alt="" class="portfolio__item-img">
+                        <img src="img/pr_1.jpg" alt="" class="portfolio__item-img">
                         <a href="#" class="portfolio__item-link">Online fashion store - Homepage</a>
                     </li>
                     <li class="portfolio__item">
-                        <img src="../img/pr_2.jpg" alt="" class="portfolio__item-img">
+                        <img src="img/pr_2.jpg" alt="" class="portfolio__item-img">
                         <a href="#" class="portfolio__item-link">Reebok Store - Concept</a>
                     </li>
                     <li class="portfolio__item">
-                        <img src="../img/pr_3.jpg" alt="" class="portfolio__item-img">
+                        <img src="img/pr_3.jpg" alt="" class="portfolio__item-img">
                         <a href="#" class="portfolio__item-link">Braun Landing Page - Concept</a>
                     </li>
                 </ul>
